Begin work for bootstrap v4

--- a/assets/js/templates/app/about.html
+++ b/assets/js/templates/app/about.html
@@ -1,14 +1,14 @@
 <h3>About</h3>
 
 <p>
-Inspired By Adam Moore (@<a href="http://twitter.com/minikomi">minikomi</a>) to help take the stress out of 
+Inspired By Adam Moore (@<a href="http://twitter.com/minikomi">minikomi</a>) to help take the stress out of
 writing all that markup to get bootstrap forms together. The original version of this was a big jQuery
-spaghetti mess, so as of March 2013 it has been rewritten using <a href="backbonejs.org">backbone.js</a> and 
+spaghetti mess, so as of March 2013 it has been rewritten using <a href="backbonejs.org">backbone.js</a> and
 takes advantage of <a href="http://underscorejs.org/#template">underscode.js templates</a>.
 </p>
 
 <p>
-This is the BootStrap 3 form builder. Re-writted the previous version using in-house Javascript class implementation,
+This is the BootStrap 4 form builder. Re-written the previous version using in-house Javascript class implementation,
 and <a href="http://mustache.github.io/">Mustache</a> templating language. Did not pick backbone.js because I already
 know it and want to learn and implment an MVC Javascript framework by my own. This is also a learning/hacking
 experience for me.
