--- a/assets/js/templates/app/tab-nav.html
+++ b/assets/js/templates/app/tab-nav.html
@@ -1,1 +1,1 @@
-<li class="nav-item"><a class="nav-link" href="#{{id}}" data-toggle="tab">{{title}}</a></li>
+<li class="nav-item"><a class="text-sm-center nav-link" href="#{{id}}" data-toggle="tab">{{title}}</a></li>
